k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-service
spec:
  selector:
    app: template
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
